# FinancialAuditor

./: README.md  main.py  pyproject.toml
frontend/: README.md  package-lock.json  package.json
frontend/src/app/: globals.css  page.tsx
frontend/src/components/: claim-pipeline-canvas.tsx
