[project]
name = "financialaudit"
version = "0.1.0"
description = "AI-assisted motor insurance claim demo: FastAPI + CrewAI backend and Next.js frontend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crewai>=0.95.0",
    "fastapi>=0.135.3",
    "langchain-anthropic>=1.4.0",
    "langchain-google-genai>=4.2.1",
    "litellm>=1.83.4",
    "uvicorn>=0.44.0",
]
